# tcn_schema

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
cmake/: FastDDSGeneratorMacros.cmake
src/dds/custom/device_hl2_msgs/: CMakeLists.txt
src/dds/custom/device_hl2_msgs/msg/: Enums.idl  Hololens2AudioStream.idl  Hololens2Enums.idl  Hololens2EyeTracking.idl  Hololens2HandTracking.idl  Hololens2Sensors.idl  Hololens2VideoStream.idl  Types.idl
src/dds/custom/device_hl2_msgs/rpc/: Hololens2Manager.idl  Hololens2RemoteControl.idl  Hololens2SceneUnderstanding.idl  Hololens2SpatialMapping.idl  Hololens2VoiceInput.idl  Types.idl
src/dds/custom/device_orbbec_msgs/: CMakeLists.txt
src/dds/custom/device_orbbec_msgs/msg/: Enums.idl  OrbbecSensors.idl  OrbbecTypes.idl
src/dds/custom/device_orbbec_msgs/rpc/: OrbbecManager.idl
src/dds/custom/pcpd_msgs/: CMakeLists.txt
src/dds/custom/pcpd_msgs/msg/: CameraSensor.idl  Instance.idl  MeshBitstream.idl  Types.idl
src/dds/custom/pcpd_msgs/rpc/: ServiceController.idl
src/dds/custom/tcnart_msgs/: CMakeLists.txt
src/dds/custom/tcnart_msgs/msg/: AudioStream.idl  CameraModel.idl  DataTracking.idl  DataflowBufferInfo.idl  EyeTracking.idl  HandTracking.idl  Logging.idl  PoseTracking.idl  Presence.idl  SpatialRelations.idl  StreamDescriptor.idl  Types.idl  VideoStream.idl  XRInput.idl  XRRuntime.idl
src/dds/custom/tcnart_msgs/rpc/: GenericManager.idl  Requests.idl  SIS.idl  SpatialRelations.idl  Types.idl
src/dds/ros2/builtin_interfaces/: CMakeLists.txt
src/dds/ros2/geometry_msgs/: CMakeLists.txt
src/dds/ros2/rosgraph_msgs/: CMakeLists.txt
src/dds/ros2/sensor_msgs/: CMakeLists.txt
src/dds/ros2/shape_msgs/: CMakeLists.txt
src/dds/ros2/statistics_msgs/: CMakeLists.txt
src/dds/ros2/std_msgs/: CMakeLists.txt
src/dds/ros2/tf2_msgs/: CMakeLists.txt
src/dds/ros2/unique_identifier_msgs/: CMakeLists.txt
